--- a/GameDevLib/GameDevLib.csproj
+++ b/GameDevLib/GameDevLib.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="OpenTk" Version="4.6.7" />
+  </ItemGroup>
+
 </Project>
