--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -20,4 +20,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\GameDevLib\GameDevLib.csproj" />
+  </ItemGroup>
+
 </Project>
